--- a/src/cssFiles/Waste.css
+++ b/src/cssFiles/Waste.css
@@ -1,9 +1,45 @@
+@import url('https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap');
+
 .Acontainer{
+    background-image: linear-gradient(to top right,#74f6d3,#88BFED,#F5E2D8);
+    /* background-image: linear-gradient(to bottom right,#F5E2D8); */
     display: grid;
     grid-template-rows: 20% 80%;
     text-align: center;
+    height: 100vh;
+}
+
+.Aheading{
+    font-size: 1.5rem;
+    font-family: 'Bruno Ace SC', cursive;
 }
 .Abody{
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 33% 33% 33%;
+    align-items: center;
+    justify-items: center;
+}
+.Asellbtn ,.Abuybtn{
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.241);
+    height: 40vh;
+    width: 20vw;
+    border-radius: 50px;
+    font-size: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    
+}
+.Asellbtn:hover ,.Abuybtn:hover{
+    box-shadow: 0px 0px 10px #2aaa88;
+    cursor: pointer;
+}
+
+#Auserpic{
+    padding: 2rem;
+    height: 40%;
+    width: 40%;
 }
