--- a/src/cssFiles/Home.css
+++ b/src/cssFiles/Home.css
@@ -2,9 +2,35 @@
 * {
   text-decoration: none;
 }
-.Pcontainer .Pnavbar {
-  position: fixed;
+
+html {
+  overflow-y: hidden;
+  scroll-behavior: smooth;
 }
+
+.Pcontainer .Pnavbar {
+  z-index: 0;
+  position: absolute;
+  display: flex;
+  background: transparent;
+  justify-content: space-around;
+  padding-top: 0.5rem;
+  /* z-index: 2; */
+  left: 10%;
+}
+
+.Pcontainer .Pnlogo {
+  height: 3.5rem;
+  width: 3.5rem;
+}
+
+.Pnavbar .Pnavbtns Button {
+  font-size: 1.2rem;
+  margin: 0.5rem 1.3rem;
+  color: rgb(0, 0, 0);
+  left: 330%;
+}
+
 .Pbody {
   background-image: linear-gradient(to top right, #74f6d3, #88bfed, #f5e2d8);
   height: 100vh;
@@ -15,11 +41,13 @@
   justify-content: space-around;
   flex-direction: row;
 }
-.Ptext {
+
+.PStext {
   font-size: 6rem;
   font-family: "Bruno Ace SC", cursive;
   color: #003c25;
 }
+
 .Pbutton {
   padding: 0.8rem;
   margin: 0.5rem;
@@ -30,8 +58,37 @@
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-weight: bolder;
+  cursor: pointer;
+}
+.Pbutton:active {
+  background: #dbdbdb;
 }
 .Pright .Plogo {
   height: 28rem;
   width: 28rem;
+}
+
+.Pbody .Pleft .Ptag {
+  font-size: 1.8rem;
+  font-family: "Bruno Ace SC", cursive;
+  color: #003c25;
+}
+
+.Plogo {
+  animation-name: updown;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+}
+
+@keyframes updown {
+  0% {
+    margin-top: 10%;
+  }
+  50% {
+    margin-top: 0%;
+  }
+  100% {
+    margin-top: 10%;
+  }
 }
