--- a/src/cssFiles/Contactus.css
+++ b/src/cssFiles/Contactus.css
@@ -10,7 +10,6 @@
 .Rnavbar {
   background: transparent;
   display: flex;
-  position: sticky;
   justify-content: space-around;
   padding-top: 0.5rem;
 }
@@ -26,37 +25,36 @@
   color: rgb(0, 0, 0);
 }
 
-.Rintcontactbox {
-  height: 20rem;
-  width: 20rem;
-}
-
-.cont-boxes {
-  background-color: #e4b991;
-  margin: 1rem;
-  width: 20rem;
-  height: 2rem;
+.Rconthead {
+  margin: 0rem 1rem 2rem 2.5rem;
+  font-size: 3rem;
 }
 
 .btn {
-  /* margin-left: 8rem; */
   background: #00fee9a7;
+  font-size: 1.3rem;
+  padding: 0.6rem;
+  border-radius: 9px;
+  margin-top: 0.6rem;
+  border: none;
+  margin-left: 9px;
 }
 
 .Rcontactusbox {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 8rem;
+  margin-top: 3rem;
 }
 
 .Rcontnamebox,
 .Rcontemailbox,
 .Rcontsubbox,
 .Rcontmsgbox {
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   border-radius: 0.5rem;
-  padding: 0.1rem;
-  margin: 0.2rem;
-  width: 24rem;
+  padding: 0.5rem;
+  margin: 0.5rem;
+  width: 28rem;
+  border: none;
 }
